fix js video bug and set pannel height to 350 with overflow.

--- a/curiositymachine/static/less/pages/base.less
+++ b/curiositymachine/static/less/pages/base.less
@@ -342,6 +342,11 @@ body {
       width: 100%;
     }
   }
+  .panel {
+    height: 350px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 
 .theme-wrapper {
